# rust_ample

./: Cargo.toml
.cargo/: config.toml
src/: entry.rs  imagetic.rs  library.rs  list.rs  macros.rs  node.rs  traits.rs
src/list/: double_linked.rs  linked.rs
src/macros/: common.rs  primitive.rs  structs.rs  traits.rs
src/macros/enums/: default.rs  flag.rs  labeled.rs  labeled_typed.rs  opted.rs
src/macros/enums/result/: default.rs
src/macros/list/: linked.rs
src/macros/primitive/: bool.rs  char.rs  numeric.rs  option.rs  phantom.rs  pointer.rs  primitive.rs  slice.rs  tuple.rs
src/macros/structs/: default.rs  generic.rs  tuple.rs
src/macros/traits/: allocatable.rs  bytes.rs  imageloader.rs  implement.rs  primitive.rs
src/macros/traits/bytes/: blanket.rs  implement.rs  place.rs  slice.rs
src/macros/traits/primitive/: bool.rs  char.rs  numeric.rs  option.rs  pointer.rs  primitive.rs  slice.rs  tuple.rs
src/macros/tuples/: default.rs
src/node/: linked.rs  linked_double.rs
src/node/linked/: queue.rs
src/node/linked_double/: queue.rs
src/string/: terminate.rs
src/traits/: allocatable.rs  bytes.rs  primitive.rs
src/traits/allocatable/: layout.rs
src/types/: list.rs
